yaml/remoteconnect-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: remoteconnect
  labels:
    apps: remoteconnect
spec:
  type: NodePort
  ports:
  - name: sshd
    port: 22
    targetPort: sshd-port
    protocol: TCP
  - name: forwarding
    port: 5432
    targetPort: forwarding-port
    protocol: TCP
  selector:
    app: remoteconnect
